--- a/dev/public/css/app.css
+++ b/dev/public/css/app.css
@@ -1022,9 +1022,37 @@ video {
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
 }
+.my-14{
+	margin-top: 3.5rem;
+	margin-bottom: 3.5rem;
+}
 .-my-2{
 	margin-top: -0.5rem;
 	margin-bottom: -0.5rem;
+}
+.my-0{
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+.mx-5{
+	margin-left: 1.25rem;
+	margin-right: 1.25rem;
+}
+.mx-3{
+	margin-left: 0.75rem;
+	margin-right: 0.75rem;
+}
+.mx-10{
+	margin-left: 2.5rem;
+	margin-right: 2.5rem;
+}
+.my-10{
+	margin-top: 2.5rem;
+	margin-bottom: 2.5rem;
+}
+.my-5{
+	margin-top: 1.25rem;
+	margin-bottom: 1.25rem;
 }
 .mt-1{
 	margin-top: 0.25rem;
@@ -1118,6 +1146,15 @@ video {
 }
 .mr-0{
 	margin-right: 0px;
+}
+.mb-0{
+	margin-bottom: 0px;
+}
+.ml-10{
+	margin-left: 2.5rem;
+}
+.mr-10{
+	margin-right: 2.5rem;
 }
 .block{
 	display: block;
@@ -1232,6 +1269,9 @@ video {
 }
 .w-96{
 	width: 24rem;
+}
+.w-1\/2{
+	width: 50%;
 }
 .min-w-full{
 	min-width: 100%;
@@ -2174,6 +2214,90 @@ img {
      object-fit: cover;
 }
 
+.drag-list__item {
+  display: flex;
+  align-items: center;
+  background-color: #F3F4F6;
+  margin: 0.3em 0;
+  padding: 1em;
+  flex-grow: 0;
+}
+.drag-list__item__handle {
+  width: 20px;
+  cursor: move;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.drag-list__item__handle > * {
+  color: black;
+  width: 6px;
+}
+.drag-list__item__texto {
+  margin: 0 0.75em;
+  flex-grow: 1;
+}
+
+.form-input--text{
+	margin-bottom: 0.75rem;
+	-webkit-appearance: none;
+	   -moz-appearance: none;
+	        appearance: none;
+	background-color: #fff;
+	border-color: #6b7280;
+	border-width: 1px;
+	border-radius: 0px;
+	padding-top: 0.5rem;
+	padding-right: 0.75rem;
+	padding-bottom: 0.5rem;
+	padding-left: 0.75rem;
+	font-size: 1rem;
+	line-height: 1.5rem;
+	--tw-shadow: 0 0 #0000;
+}
+
+.form-input--text:focus{
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+	--tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
+	--tw-ring-offset-width: 0px;
+	--tw-ring-offset-color: #fff;
+	--tw-ring-color: #2563eb;
+	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+	border-color: #2563eb;
+}
+
+.form-input--text::-moz-placeholder{
+	color: #6b7280;
+	opacity: 1;
+}
+
+.form-input--text:-ms-input-placeholder{
+	color: #6b7280;
+	opacity: 1;
+}
+
+.form-input--text::placeholder{
+	color: #6b7280;
+	opacity: 1;
+}
+
+.form-input--text::-webkit-datetime-edit-fields-wrapper{
+	padding: 0;
+}
+
+.form-input--text::-webkit-date-and-time-value{
+	min-height: 1.5em;
+}
+
+.form-input--text{
+	border-radius: 0.375rem;
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+
 .tabs__boton{
 	display: flex;
 	flex-direction: row-reverse;
@@ -2218,7 +2342,10 @@ img {
 }
 
 .boton{
-	display: inline-block;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 0.5rem;
 	border-radius: 0.375rem;
 	border-width: 0px;
 	padding-left: 1rem;
@@ -2226,8 +2353,8 @@ img {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
 	text-align: center;
-	font-size: 0.875rem;
-	line-height: 1.25rem;
+	font-size: 1rem;
+	line-height: 1.5rem;
 	font-weight: 500;
 	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
 	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -2321,6 +2448,33 @@ img {
 }
 
 .boton--rojo:disabled{
+	--tw-bg-opacity: 1;
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+
+.boton--verde{
+	--tw-bg-opacity: 1;
+	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.boton--verde:hover{
+	--tw-bg-opacity: 1;
+	background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
+}
+
+.boton--verde:focus{
+	--tw-ring-opacity: 1;
+	--tw-ring-color: rgba(110, 231, 183, var(--tw-ring-opacity));
+}
+
+.boton--verde:active{
+	--tw-bg-opacity: 1;
+	background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
+}
+
+.boton--verde:disabled{
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
