--- a/dev/resources/css/app.scss
+++ b/dev/resources/css/app.scss
@@ -6,6 +6,7 @@
 @import './reset';
 @import 'layouts';
 @import 'typography';
+@import 'componentes';
 
 
 .tabs__boton{
@@ -19,7 +20,7 @@
 }
 
 .boton{
-    @apply inline-block px-4 py-2 rounded-md text-sm font-medium text-center border-0 focus:outline-none focus:ring transition; 
+    @apply flex justify-center items-center gap-2 px-4 py-2 rounded-md text-base font-medium text-center border-0 focus:outline-none focus:ring transition; 
 }
 
 .boton--gris{
@@ -32,6 +33,10 @@
 
 .boton--rojo{
     @apply text-white bg-red-500 disabled:bg-gray-300 hover:bg-red-600 active:bg-red-700 focus:ring-red-300;
+}
+
+.boton--verde{
+    @apply text-white bg-green-500 disabled:bg-gray-300 hover:bg-green-600 active:bg-green-700 focus:ring-green-300;
 }
 
 .invisible{
