--- a/dev/public/css/app.css
+++ b/dev/public/css/app.css
@@ -1018,6 +1018,10 @@ video {
 	margin-top: 1.5rem;
 	margin-bottom: 1.5rem;
 }
+.mx-2{
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
+}
 .my-5{
 	margin-top: 1.25rem;
 	margin-bottom: 1.25rem;
@@ -1045,10 +1049,6 @@ video {
 .-my-2{
 	margin-top: -0.5rem;
 	margin-bottom: -0.5rem;
-}
-.mx-2{
-	margin-left: 0.5rem;
-	margin-right: 0.5rem;
 }
 .mt-1{
 	margin-top: 0.25rem;
@@ -1137,6 +1137,9 @@ video {
 .-mt-px{
 	margin-top: -1px;
 }
+.ml-7{
+	margin-left: 1.75rem;
+}
 .mr-10{
 	margin-right: 2.5rem;
 }
@@ -1148,12 +1151,6 @@ video {
 }
 .mr-0{
 	margin-right: 0px;
-}
-.ml-10{
-	margin-left: 2.5rem;
-}
-.ml-7{
-	margin-left: 1.75rem;
 }
 .block{
 	display: block;
@@ -1690,14 +1687,11 @@ video {
 .p-6{
 	padding: 1.5rem;
 }
-.p-5{
-	padding: 1.25rem;
+.p-3{
+	padding: 0.75rem;
 }
 .p-8{
 	padding: 2rem;
-}
-.p-3{
-	padding: 0.75rem;
 }
 .p-1{
 	padding: 0.25rem;
@@ -2586,7 +2580,7 @@ img {
 }
 
 .invisible {
-  display: none;
+  display: none !important;
 }
 
 .form-ingrediente {
