--- a/dev/public/css/app.css
+++ b/dev/public/css/app.css
@@ -1018,9 +1018,29 @@ video {
 	margin-top: 1.5rem;
 	margin-bottom: 1.5rem;
 }
+.my-5{
+	margin-top: 1.25rem;
+	margin-bottom: 1.25rem;
+}
+.mx-3{
+	margin-left: 0.75rem;
+	margin-right: 0.75rem;
+}
+.my-10{
+	margin-top: 2.5rem;
+	margin-bottom: 2.5rem;
+}
+.mx-10{
+	margin-left: 2.5rem;
+	margin-right: 2.5rem;
+}
 .my-2{
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
+}
+.my-14{
+	margin-top: 3.5rem;
+	margin-bottom: 3.5rem;
 }
 .-my-2{
 	margin-top: -0.5rem;
@@ -1112,6 +1132,12 @@ video {
 }
 .-mt-px{
 	margin-top: -1px;
+}
+.mr-10{
+	margin-right: 2.5rem;
+}
+.mb-0{
+	margin-bottom: 0px;
 }
 .-mt-1{
 	margin-top: -0.25rem;
@@ -1229,6 +1255,9 @@ video {
 }
 .w-40{
 	width: 10rem;
+}
+.w-1\/2{
+	width: 50%;
 }
 .w-96{
 	width: 24rem;
@@ -1368,11 +1397,11 @@ video {
 .gap-5{
 	gap: 1.25rem;
 }
-.gap-2{
-	gap: 0.5rem;
-}
 .gap-3{
 	gap: 0.75rem;
+}
+.gap-2{
+	gap: 0.5rem;
 }
 .space-x-3 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-x-reverse: 0;
@@ -1651,11 +1680,11 @@ video {
 .p-6{
 	padding: 1.5rem;
 }
-.p-8{
-	padding: 2rem;
-}
 .p-3{
 	padding: 0.75rem;
+}
+.p-8{
+	padding: 2rem;
 }
 .p-1{
 	padding: 0.25rem;
