--- a/dev/public/css/app.css
+++ b/dev/public/css/app.css
@@ -1432,6 +1432,9 @@ video {
 .justify-between{
 	justify-content: space-between;
 }
+.justify-around{
+	justify-content: space-around;
+}
 .gap-6{
 	gap: 1.5rem;
 }
